[gd_scene load_steps=10 format=2]

[ext_resource path="res://ASSETS/daemon/daemon_1.png" type="Texture" id=1]
[ext_resource path="res://ASSETS/daemon/Daemon_2.png" type="Texture" id=2]
[ext_resource path="res://ASSETS/daemon/Daemon_3.png" type="Texture" id=3]
[ext_resource path="res://ASSETS/daemon/Daemon_4.png" type="Texture" id=4]
[ext_resource path="res://daemon.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 2 ) ],
"loop": true,
"name": "daemon_walk",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47.8572, 48.5714 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 62.1429, 25 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 37.8571, 10 )

[node name="daemon" type="KinematicBody2D"]
scale = Vector2( 0.7, 0.7 )
collision_layer = 16
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "daemon_walk"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.14285, 11.4286 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 3 )

[node name="floor_checker" type="RayCast2D" parent="."]
scale = Vector2( 1, 1 )
enabled = true
cast_to = Vector2( 0, 71 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 16

[node name="sides_checker" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -5, 0.714283 )
scale = Vector2( 0.999999, 0.999999 )
shape = SubResource( 2 )

[node name="Area2D3" type="Area2D" parent="."]
collision_layer = 16

[node name="top_checker" type="CollisionShape2D" parent="Area2D3"]
position = Vector2( -4.28571, -42.8571 )
shape = SubResource( 5 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_entered" from="Area2D3" to="." method="_landed_on_head"]
